--- a/index.html
+++ b/index.html
@@ -1,12 +1,1 @@
----
-layout: default
----
-
-<section>
-	<p>
-		<a href="/notes">Notes</a>
-	</p>
-	<p>
-		<a href="/utmbuilder">UTM Builder</a>
-	</p>
-</section>
+I am Catherine
