editing home page, adding resume page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,69 @@
-I am Catherine
+<HTML>
+<HEAD>
+<TITLE>catherine</TITLE>
+<style type="text/css">
+body, html {
+  margin-top: 50; padding:0
+}
+td{
+  padding-right: 20px;
+  padding-bottom: 20px;
+}
+
+</style>
+</HEAD>
+<BODY>
+  <CENTER>
+  <table>
+  <tr>
+    <td>
+        <b>Bulk UTM Builder</b>
+    </td>
+    <td>
+      Tool for marketers to construct and export UTM codes in bulk to a .xlsx or .csv file
+    </td>
+    <td>
+      <a href="http://catherine.work/utmbuilder">Demo</a>
+    </td>
+    <td>
+      <a href="https://github.com/eastandwestwind/utmbuilder">GitHub</a>
+    </td>
+  </tr>
+  <tr>
+    <td>
+      <b>Boxes</b>
+    </td>
+    <td>
+       Game in progress, using Phaser.io and hand drawn spritesheets to create animations and physics
+    </td>
+    <td>
+      <a href="http://catherine.work/boxes">Demo</a>
+    </td>
+    <td>
+      <a href="https://github.com/eastandwestwind/boxes">GitHub</a>
+    </td>
+  </tr>
+  <tr>
+    <td>
+      <b>Notes</b>
+    </td>
+    <td>
+    Notebook of writings focused on the R programming language, including practical use cases and instruction
+    </td>
+    <td>
+      <a href="http://catherine.work/notes">Notes</a>
+    </td>
+  </tr>
+  <tr>
+    <td>
+      <b>Resume</b>
+    </td>
+    <td>
+    </td>
+    <td>
+      <a href="http://catherine.work/resume">Resume</a>
+    </td>
+  </tr>
+</table>
+</BODY>
+</HTML>
