--- a/resume/index.html
+++ b/resume/index.html
@@ -57,13 +57,13 @@ ul{
     Modeled findings into dashboards that could be easily digested and shared amongst C-level execs, and presented reports on a weekly or monthly basis
   </li>
   <li>
-    <i>Technologies used: Google Analytics / Tag Manager / Webmaster Tools, Tableau, R, Python, Git, HTML/CSS, SQL, JavaScript, Twitter Search API, Google Analytics Core Reporting API</i>
+    <i>Technologies used: Google Analytics / Tag Manager / Webmaster Tools, Tableau, R, Python, Git, HTML/CSS, SQL, JavaScript, jquery, Twitter Search API, Google Analytics Core Reporting API</i>
   </li>
 </ul>
 <div>
   <span class=col1>Co-founder / Consultant, DigitDragon</span>
   <span class=col2>Madison, WI</span>
-  <span class=col3>Dec 2014 - current</span>
+  <span class=col3>Dec 2014 - Aug 2015</span>
 </div>
 <ul>
   <li>
@@ -124,11 +124,11 @@ ul{
 </br>
 
 <h1>
-  SKILLS
+  ABOUT ME
 </h1>
 <ul>
   <li>
-    Skills: web design, marketing analytics, analytical strategy, basic machine learning, data scraping, data management, data visualization, statistical analysis, UX, music/video/photo editing, remote working, concert pianist and violinist
+    Skills: web design, marketing analytics, basic machine learning, data scraping, data visualization, statistical analysis, UX, music/video/photo editing, remote working
   </li>
   <li>
     Hobbies/Interests: Composing music, skiing, traveling, rock climbing, cooking, sketching
