--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       Tool for marketers to construct and export UTM codes in bulk to a .xlsx or .csv file
     </td>
     <td>
-      <a href="http://catherine.work/utmbuilder">Demo</a>
+      <a class="utmdemo" href="http://catherine.work/utmbuilder">Demo</a>
     </td>
     <td>
-      <a href="https://github.com/eastandwestwind/utmbuilder">GitHub</a>
+      <a class="utmgit" href="https://github.com/eastandwestwind/utmbuilder">GitHub</a>
     </td>
   </tr>
   <tr>
@@ -48,10 +48,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
        Game in progress, using Phaser.io and hand drawn spritesheets to create animations and physics
     </td>
     <td>
-      <a href="http://catherine.work/boxes">Demo</a>
+      <a class="boxesdemo" href="http://catherine.work/boxes">Demo</a>
     </td>
     <td>
-      <a href="https://github.com/eastandwestwind/boxes">GitHub</a>
+      <a class="boxesgit" href="https://github.com/eastandwestwind/boxes">GitHub</a>
     </td>
   </tr>
   <tr>
@@ -62,7 +62,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     Notebook of writings focused on the R programming language, including practical use cases and instruction
     </td>
     <td>
-      <a href="http://catherine.work/notes">Notes</a>
+      <a class="notes" href="http://catherine.work/notes">Notes</a>
     </td>
   </tr>
   <tr>
@@ -72,7 +72,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <td>
     </td>
     <td>
-      <a href="http://catherine.work/resume">Resume</a>
+      <a class="resume" href="http://catherine.work/resume">Resume</a>
     </td>
   </tr>
 </table>
