starting to figure out dashboard, editing notes description

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <b>Notes</b>
     </td>
     <td>
-    Notebook of writings focused on the R programming language, including practical use cases and instruction
+    Posts containing notes on data mining, munging, and visualization in the R programming language
     </td>
     <td>
       <a class="notes" href="http://catherine.work/notes">Notes</a>
