--- a/dashboard/pretty/index.html
+++ b/dashboard/pretty/index.html
@@ -9,7 +9,7 @@
 (function(w,d,s,g,js,fs){
   g=w.gapi||(w.gapi={});g.analytics={q:[],ready:function(f){this.q.push(f);}};
   js=d.createElement(s);fs=d.getElementsByTagName(s)[0];
-  js.src='https://apis.google.com/js/platform.js';
+  js.src='https://apis.google.com/js/client.js';
   fs.parentNode.insertBefore(js,fs);js.onload=function(){g.load('analytics');};
 }(window,document,'script'));
 </script>
@@ -32,13 +32,13 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.2/moment.min.js"></script>
 
 <!-- Include the ViewSelector2 component script. -->
-<script src="/public/javascript/embed-api/components/view-selector2.js"></script>
+<script src="https://ga-dev-tools.appspot.com/public/javascript/embed-api/components/view-selector2.js"></script>
 
 <!-- Include the DateRangeSelector component script. -->
-<script src="/public/javascript/embed-api/components/date-range-selector.js"></script>
+<script src="https://ga-dev-tools.appspot.com/public/javascript/embed-api/components/date-range-selector.js"></script>
 
 <!-- Include the ActiveUsers component script. -->
-<script src="/public/javascript/embed-api/components/active-users.js"></script>
+<script src="https://ga-dev-tools.appspot.com/public/javascript/embed-api/components/active-users.js"></script>
 
 <!-- Include polyfill for promise -->
 <script src="https://www.promisejs.org/polyfills/promise-7.0.4.min.js"></script>
@@ -111,7 +111,7 @@ gapi.analytics.ready(function() {
    * title whenever the user changes the view.
    */
   viewSelector.on('viewChange', function(data) {
-    var title = document.getElementById('view-name');
+    var title = document.getElementById('112617412');
     title.innerHTML = data.property.name + ' (' + data.view.name + ')';
 
     // Start tracking active users for this view.
