--- a/index.html
+++ b/index.html
@@ -3,11 +3,29 @@
 <TITLE>catherine</TITLE>
 <style type="text/css">
 body, html {
-  margin-top: 50; padding:0
+  margin-top: 50;
+  padding:0;
 }
 td{
   padding-right: 20px;
   padding-bottom: 20px;
+}
+#link{
+  padding-left: 20px;
+  padding-right: 20px;
+}
+.nav{
+  padding-bottom: 30px;
+}
+.project{
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+h1{
+  font-size: 40px;
+}
+h2{
+  font-size: 20px;
 }
 
 </style>
@@ -25,56 +43,52 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </HEAD>
 <BODY>
   <CENTER>
+    <h1>Catherine Smith</h1>
+    <div class="nav">
+        <a id="link" class="notes" href="http://catherine.work/notes">Notes</a>
+        <a id="link" class="resume" href="http://catherine.work/resume">Resume</a>
+        <a id="link" class="contact" href="http://www.google.com/recaptcha/mailhide/d?k=014VTpFHQo_w-bJjM2PEvGXQ==&amp;c=orkebmV_uIKgojNQ-aOyU1QpPEKKXiYjHikoykQFJo4=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\075014VTpFHQo_w-bJjM2PEvGXQ\75\75\46c\75orkebmV_uIKgojNQ-aOyU1QpPEKKXiYjHikoykQFJo4\075', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="contact Catherine">Contact</a>
+    </div>
+  <div class="project">
+    <h2>
+      UTM Builder
+    </h2>
+    <img src="img/utmimg.png" height="150px">
   <table>
-  <tr>
-    <td>
-        <b>Bulk UTM Builder</b>
-    </td>
-    <td>
-      Tool for marketers to construct and export UTM codes in bulk to a .xlsx or .csv file
-    </td>
-    <td>
-      <a class="utmdemo" href="http://catherine.work/utmbuilder">Demo</a>
-    </td>
-    <td>
-      <a class="utmgit" href="https://github.com/eastandwestwind/utmbuilder">GitHub</a>
-    </td>
-  </tr>
-  <tr>
-    <td>
-      <b>Boxes</b>
-    </td>
-    <td>
-       Game in progress, using Phaser.io and hand drawn spritesheets to create animations and physics
-    </td>
-    <td>
-      <a class="boxesdemo" href="http://catherine.work/boxes">Demo</a>
-    </td>
-    <td>
-      <a class="boxesgit" href="https://github.com/eastandwestwind/boxes">GitHub</a>
-    </td>
-  </tr>
-  <tr>
-    <td>
-      <b>Notes</b>
-    </td>
-    <td>
-    Posts containing notes on data mining, munging, and visualization in the R programming language
-    </td>
-    <td>
-      <a class="notes" href="http://catherine.work/notes">Notes</a>
-    </td>
-  </tr>
-  <tr>
-    <td>
-      <b>Resume</b>
-    </td>
-    <td>
-    </td>
-    <td>
-      <a class="resume" href="http://catherine.work/resume">Resume</a>
-    </td>
-  </tr>
-</table>
+    <tr>
+      <td>
+        <a class="utmdemo" href="http://catherine.work/utmbuilder">Demo</a>
+      </td>
+      <td>
+        <a class="utmgit" href="https://github.com/eastandwestwind/utmbuilder">GitHub</a>
+      </td>
+    </tr>
+  </table>
+  <div>
+          Tool to create and export UTM codes in bulk
+  </div>
+  </div>
+  <div class="project">
+    <h2>
+      Boxes
+    </h2>
+    <img src="img/boxesimg.png" height="150px">
+  <table>
+    <tr>
+      <td>
+        <a class="boxesdemo" href="http://catherine.work/boxes">Demo</a>
+      </td>
+      <td>
+        <a class="boxesgit" href="https://github.com/eastandwestwind/boxes">GitHub</a>
+      </td>
+    </tr>
+  </table>
+  <div>
+         Playing with spritesheet animations and physics
+  </div>
+</div>
+</br>
+
+
 </BODY>
 </HTML>
