--- a/index.html
+++ b/index.html
@@ -27,8 +27,39 @@ h1{
 h2{
   font-size: 20px;
 }
+img {
+  filter: gray; /* IE6-9 */
+  filter: grayscale(1); /* Microsoft Edge and Firefox 35+ */
+  -webkit-filter: grayscale(1); /* Google Chrome, Safari 6+ & Opera 15+ */
+  opacity: .5;
+}
+/* Disable grayscale on hover */
+.overlay:hover img{
+  filter: none;
+  -webkit-filter: grayscale(0);
+  opacity: 1;
+}
+.overlay {
+  position: relative;
+  display: inline-block;
+}
+.overlay::after {
+    content:' ';
+    width:100%; height:100%;
+    top:0; left:0;
+    position: absolute;
+    background:rgba(0,0,0,0.1);
+}
+.overlay:hover::after {
+    background:rgba(0,0,0,0.05);
+}
 
 </style>
+
+<script>
+
+</script>
+
 
 <!-- Google Tag Manager -->
 <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-WBKD5N"
@@ -53,7 +84,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <h2>
       UTM Builder
     </h2>
-    <img src="img/utmimg.png" height="150px">
+    <div class="overlay">
+    <img src="img/utmimg.png" height="150px" class="screenshot">
+  </div>
   <table>
     <tr>
       <td>
@@ -72,7 +105,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <h2>
       Boxes
     </h2>
-    <img src="img/boxesimg.png" height="150px">
+    <div class="overlay">
+    <img src="img/boxesimg.png" height="150px" class="screenshot">
+  </div>
   <table>
     <tr>
       <td>
