--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <HTML>
 <HEAD>
 <TITLE>catherine</TITLE>
-<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Inconsolata" />
+<link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
 <style type="text/css">
 body, html {
   margin-top: 50;
@@ -24,12 +24,12 @@ td{
   padding-bottom: 20px;
 }
 h1{
-  font-size: 40px;
+  font-size: 36px;
 }
 h2{
   font-family: "Inconsolata";
-  font-size: 36px;
-  color: #505050;
+  font-size: 26px;
+  /*color: #505050;*/
   /*margin: 10px;*/
 }
 .title {
@@ -64,7 +64,7 @@ img {
     width:100%; height:100%;
     top:0; left:0;
     position: absolute;
-    background:rgba(200,200,200,0.7);
+    background:rgba(184,184,184,0.5);
 }
 .overlay:hover::after {
     background:rgba(0,0,0,0.03);
@@ -90,11 +90,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 </HEAD>
 <BODY>
   <CENTER>
-    <h1>Catherine Smith</h1>
+    <h1>catherine smith</h1>
     <div class="nav">
-        <a id="link" class="notes" href="http://catherine.work/notes">Notes</a>
-        <a id="link" class="resume" href="http://catherine.work/resume">Resume</a>
-        <a id="link" class="contact" href="http://www.google.com/recaptcha/mailhide/d?k=014VTpFHQo_w-bJjM2PEvGXQ==&amp;c=orkebmV_uIKgojNQ-aOyU1QpPEKKXiYjHikoykQFJo4=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\075014VTpFHQo_w-bJjM2PEvGXQ\75\75\46c\75orkebmV_uIKgojNQ-aOyU1QpPEKKXiYjHikoykQFJo4\075', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="contact Catherine">Contact</a>
+        <a id="link" class="notes" href="http://catherine.work/notes">notes</a>
+        <a id="link" class="resume" href="http://catherine.work/resume">resume</a>
+        <a id="link" class="contact" href="http://www.google.com/recaptcha/mailhide/d?k=014VTpFHQo_w-bJjM2PEvGXQ==&amp;c=orkebmV_uIKgojNQ-aOyU1QpPEKKXiYjHikoykQFJo4=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\075014VTpFHQo_w-bJjM2PEvGXQ\75\75\46c\75orkebmV_uIKgojNQ-aOyU1QpPEKKXiYjHikoykQFJo4\075', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="contact Catherine">contact</a>
     </div>
   <div class="project">
 
@@ -102,21 +102,21 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <img src="img/utmimg.png" height="150px" class="screenshot">
     <div class="title">
     <h2>
-      UTM Builder
+      utm builder
     </h2>
 
   </div>
   </div>
-  <div class="desc">
+  <!-- <div class="desc">
           Tool to create and export UTM codes in bulk
-  </div>
+  </div> -->
   <table>
     <tr>
       <td>
-        <a class="utmdemo" href="http://catherine.work/utmbuilder">Demo</a>
+        <a class="utmdemo" href="http://catherine.work/utmbuilder">demo</a>
       </td>
       <td>
-        <a class="utmgit" href="https://github.com/eastandwestwind/utmbuilder">GitHub</a>
+        <a class="utmgit" href="https://github.com/eastandwestwind/utmbuilder">github</a>
       </td>
     </tr>
   </table>
@@ -127,20 +127,20 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <img src="img/boxesimg.png" height="150px" class="screenshot">
     <div class="title">
     <h2>
-      Boxes
+      boxes
     </h2>
   </div>
   </div>
-  <div class="desc">
+  <!-- <div class="desc">
          Playing with spritesheet animations and physics
-  </div>
+  </div> -->
   <table>
     <tr>
       <td>
-        <a class="boxesdemo" href="http://catherine.work/boxes">Demo</a>
+        <a class="boxesdemo" href="http://catherine.work/boxes">demo</a>
       </td>
       <td>
-        <a class="boxesgit" href="https://github.com/eastandwestwind/boxes">GitHub</a>
+        <a class="boxesgit" href="https://github.com/eastandwestwind/boxes">github</a>
       </td>
     </tr>
   </table>
