--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <HTML>
 <HEAD>
-<TITLE>catherine</TITLE>
+<TITLE>Catherine Smith - Data Analytics and Marketing Strategy</TITLE>
+<meta name="description" content="Catherine Smith is focused on data analytics and web development. This site features notes and projects, including a UTM code builder and a boxes game.">
 <link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
 <style type="text/css">
 body, html {
