--- a/resume/index.html
+++ b/resume/index.html
@@ -1,6 +1,7 @@
 <HTML>
 <HEAD>
-<TITLE>catherine</TITLE>
+<TITLE>Catherine's Resume</TITLE>
+<meta name="description" content="Catherine has been in data science for just over two years. Her strongest skills include drawing insights from web engagement metrics, and visualizing data.">
 <style type="text/css">
 body, html {
   margin-top: 50; margin-left: 150px; margin-right: 150px;padding:0
