--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
 <style type="text/css">
 body, html {
-  margin-top: 50;
+  margin-top: 35;
   padding:0;
   font-family: "Inconsolata";
 }
@@ -17,6 +17,9 @@ td{
   padding-left: 20px;
   padding-right: 20px;
 }
+a{
+  color: blue;
+}
 .nav{
   padding-bottom: 30px;
 }
@@ -26,6 +29,7 @@ td{
 }
 h1{
   font-size: 36px;
+  font-weight: normal;
 }
 h2{
   font-family: "Inconsolata";
