mobile friendly resume

--- a/resume/index.html
+++ b/resume/index.html
@@ -1,12 +1,16 @@
 <HTML>
 <HEAD>
 <TITLE>Catherine's Resume</TITLE>
-<meta name=viewport content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="Catherine has been in data science for just over two years. Her strongest skills include drawing insights from web engagement metrics, and visualizing data.">
 <link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
 <style type="text/css">
 body, html {
-  margin-top: 35; margin-left: 150px; margin-right: 150px;padding:0
+  margin-top: 35;
+  padding:0;
+  max-width: 1000px;
+  margin-left: auto;
+  margin-right: auto;
 }
 h1{
   font-size: 36px;
@@ -57,17 +61,19 @@ ul{
 }
 
 </style>
-<!-- Google Tag Manager -->
-<noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-WBKD5N"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-WBKD5N');</script>
-<!-- End Google Tag Manager -->
+
 </HEAD>
 <BODY>
+<!-- Google Tag Manager -->
+<noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-WBKD5N"
+                  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+        '//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-WBKD5N');</script>
+<!-- End Google Tag Manager -->
+
   <center>
 	<h1>catherine smith</h1>
 	<div class="nav">
